--- a/index.html
+++ b/index.html
@@ -1,1 +1,254 @@
-<p>Hello Sowmya<p>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mk</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="left.css">
+  <link rel="stylesheet" href="right.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="left-side">
+      <div class="profileText">
+        <div class="imgBx">
+          <img src="pic.jpg" alt="picture">
+        </div>
+        <h2>Muthu Kumar <br><span>Web Developer</span></h2>
+      </div>
+
+      <div class="contactInfo">
+        <h3 class="title">Contact Info</h3>
+        <ul>
+          <li>
+            <span class="icon"> <i class="fa fa-phone" area-hidden="true"></i> </span>
+            <span class="text">+65 8558 5435</span>
+          </li>
+          <li>
+            <span class="icon"><i class="fa fa-envelope-o" area-hidden="true"></i></span>
+            <span class="text">kumar.bsc@live.com</span>
+          </li>
+          <!-- <li>
+            <span class="icon"><i class="fa fa-globe" area-hidden="true"></i></span>
+            <span class="text">www.mywebsite.com/</span>
+          </li> -->
+          <li>
+            <a href="https://www.linkedin.com/in/mk-dev" target="_blank">
+              <span class="icon"><i class="fa fa-linkedin" area-hidden="true"></i></span>
+              <span class="text">www.linkedin.com/in/mk-dev</span>
+            </a>
+          </li>
+          <li>
+            <span class="icon"><i class="fa fa-map-marker" area-hidden="true"></i></span>
+            <span class="text">Singapore</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="contactInfo education">
+        <h3 class="title">Education</h3>
+        <ul>
+          <li>
+            <h4>2012 - 2015</h4>
+            <h5>M Tech., Software Engineering</h5>
+            <h5>BITS Pilani</h5>
+          </li>
+          <li>
+            <h4>2008 - 2011</h4>
+            <h5>Bachelor Degree in Computer Science</h5>
+            <h5>Madurai Kamaraj Unversity</h5>
+          </li>
+        </ul>
+      </div>
+
+      <div class="contactInfo language">
+        <h3 class="title">Languages</h3>
+        <ul>
+          <li>
+            <span class="text">English</span>
+            <span class="percent">
+              <div style="width: 80%;"></div>
+            </span>
+          </li>
+          <li>
+            <span class="text">Tamil</span>
+            <span class="percent">
+              <div style="width: 100%;"></div>
+            </span>
+          </li>
+          <li>
+            <span class="text">Hindi</span>
+            <span class="percent">
+              <div style="width: 40%;"></div>
+            </span>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="right-side">
+      <div class="about">
+        <h2 class="title2">Profile</h2>
+        <p>10 years of experience in Front-End development with <br>Efficient to learn and function effectively in an
+          organization and be able to deliver to the bottom-line. To constantly upgrade my knowledge and skills and
+          make a difference in whatever I do.</p>
+      </div>
+      <div class="about skills">
+        <h2 class="title2">Professional Skills</h2>
+
+        <div class="box">
+          <h4 style="color: #de4b25;">HTML 5</h4>
+          <div class="percent">
+            <div style="width: 90%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #264de4;">CSS 3, SCSS, LESS</h4>
+          <div class="percent">
+            <div style="width: 90%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #f0d81d;">Javascript, ES6</h4>
+          <div class="percent">
+            <div style="width: 90%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #3178c6;">Typescript</h4>
+          <div class="percent">
+            <div style="width: 70%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #b52e31;">Angular</h4>
+          <div class="percent">
+            <div style="width: 85%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #61dafb;">React</h4>
+          <div class="percent">
+            <div style="width: 80%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #42b983;">Vue</h4>
+          <div class="percent">
+            <div style="width: 80%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #7348b7;">Redux, Vuex & NGRX</h4>
+          <div class="percent">
+            <div style="width: 80%;"></div>
+          </div>
+        </div>
+
+        <div class="box">
+          <h4 style="color: #61dafb;">React Native</h4>
+          <div class="percent">
+            <div style="width: 65%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #3a4451;">Cordova</h4>
+          <div class="percent">
+            <div style="width: 70%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4 style="color: #ea4d32;">Git, Jira, Agile</h4>
+          <div class="percent">
+            <div style="width: 80%;"></div>
+          </div>
+        </div>
+      </div>
+      <div class="about">
+        <h2 class="title2">Experience</h2>
+        <div class="box">
+          <div class="year_company">
+            <h5>Sep 2021 - Present </h5>
+            <h5>HCL Technologies</h5>
+          </div>
+          <div class="text">
+            <h4>Technical Lead / Web Developer</h4>
+            <p>
+              Working as a Technical Lead with following responsibilities Develop and write high quality coding that
+              meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>June 2017 - Sep 2021 </h5>
+            <h5>Capgemini P.Ltd, Singapore</h5>
+          </div>
+          <div class="text">
+            <h4>Consultant/Web Developer</h4>
+            <p>Working as a Consultant with following responsibilities Develop and write high quality coding that meets
+              customer requirements. Designing User Interface while achieving Customer/user Friendliness. Designing
+              mobile apps that meets the customers expectations, Perform unit tests and fix bugs</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>Jul 2011 - Jun 2017 </h5>
+            <h5>Wipro Technologies, Chennai, India</h5>
+          </div>
+          <div class="text">
+            <h4>Senior Project Engineer</h4>
+            <p>Worked as a Web Developer in various projects with following responsibilities Develop and write high
+              quality coding that meets customer requirements. Lead a team to deliver customer focused features. Develop
+              POCs to bring out ideas and innovations into applications.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="about interests">
+        <h2 class="title2">Awards</h2>
+        <p>Delivery Execution Excellence award from Wipro Technologies</p>
+        <p>Team award of Best Digital Client Experience app SC Private Bank </p>
+      </div>
+
+      <div class="about interests">
+        <h2 class="title2">External Certifications</h2>
+        <p>React, React Native, Flutter, MERN Stack & Micro frontends</p>
+      </div>
+
+      <div class="about interests">
+        <h2 class="title2">Hobby/Tech</h2>
+        <p>Youtuber on interesting code snippets</p>
+        <a target="_blank" href="https://www.youtube.com/channel/UCO8OwLWlAIQU4kYWLytkEVw" class="btn">
+          <i class="fa fa-youtube"></i>
+          <span>Youtube Channel</span>
+      </div>
+
+      <div class="about interests">
+        <h2 class="title2">Preferred Job Locations</h2>
+        <p>Singapore, Australia & Canada</p>
+      </div>
+
+      <div class="about interests">
+        <h2 class="title2">Interest</h2>
+        <ul>
+          <li><i class="fa fa-gamepad" area-hidden="true"></i> Web dev </li>
+          <li><i class="fa fa-gamepad" area-hidden="true"></i> Mobile dev </li>
+          <li><i class="fa fa-globe" area-hidden="true"></i> Internet</li>
+          <li><i class="fa fa-book" area-hidden="true"></i> Tech</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
