--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
         <h2 class="title2">Experience</h2>
         <div class="box">
           <div class="year_company">
-            <h5>Sep 2021 - Present </h5>
-            <h5>HCL Technologies</h5>
+            <h5> October 2015 to February 2018 </h5>
+            <h5>Herc Rentals</h5>
           </div>
           <div class="text">
-            <h4>Technical Lead / Web Developer</h4>
+            <h4> Senior UI Developer</h4>
             <p>
               Working as a Technical Lead with following responsibilities Develop and write high quality coding that
               meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
@@ -165,11 +165,11 @@
         </div>
         <div class="box">
           <div class="year_company">
-            <h5>June 2017 - Sep 2021 </h5>
-            <h5>Capgemini P.Ltd, Singapore</h5>
+            <h5>July 2013 to September 2015 </h5>
+            <h5>Alcatel Lucent-1830 CIT Web UI</h5>
           </div>
           <div class="text">
-            <h4>Consultant/Web Developer</h4>
+            <h4>Senior UI Developer</h4>
             <p>Working as a Consultant with following responsibilities Develop and write high quality coding that meets
               customer requirements. Designing User Interface while achieving Customer/user Friendliness. Designing
               mobile apps that meets the customers expectations, Perform unit tests and fix bugs</p>
@@ -177,11 +177,11 @@
         </div>
         <div class="box">
           <div class="year_company">
-            <h5>Jul 2011 - Jun 2017 </h5>
-            <h5>Wipro Technologies, Chennai, India</h5>
+            <h5>August 2012 to June 2013</h5>
+            <h5>Mcgraw hill Platts-PRP</h5>
           </div>
           <div class="text">
-            <h4>Senior Project Engineer</h4>
+            <h4>UI Developer</h4>
             <p>Worked as a Web Developer in various projects with following responsibilities Develop and write high
               quality coding that meets customer requirements. Lead a team to deliver customer focused features. Develop
               POCs to bring out ideas and innovations into applications.</p>
@@ -191,8 +191,12 @@
 
       <div class="about interests">
         <h2 class="title2">Awards</h2>
-        <p>Delivery Execution Excellence award from Wipro Technologies</p>
-        <p>Team award of Best Digital Client Experience app SC Private Bank </p>
+        <p>Best New Bee award, given to best and fast learning fresher at the GMT domain in WIPRO.</p>
+        <p>‘Feather in my Cap’ award given to Best Team Member in ALU account in Wipro </p>
+        <p>‘You made a difference’, ’Round of Applause’, ’Outstanding contribution and Commitment’, ’Victory league promotion’ awards from Herc Account in Wipro. </p>
+        <p>‘Star of the month’, ’Star of the Quarter’ awards 2 each in FedEX account. Also got many appreciations from client on the work done for Admin application of IRC </p>
+        <p>‘Best reviewer’ and ‘Best in all development, review and requirement understanding’ award from client in Veritas EDP</p>
+        <p>Got multiple appreciations from clients in CITCO and DELL accounts </p>
       </div>
 
 
