--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="left-side">
       <div class="profileText">
         <div class="imgBx">
-          <img src="pic.jpg" alt="picture">
+          <img src="sowmya.jpg" alt="picture">
         </div>
         <h2>Sowmya Thammali<br><span>UI Developer</span></h2>
       </div>
@@ -150,6 +150,62 @@
       </div>
       <div class="about">
         <h2 class="title2">Experience</h2>
+        <div class="box">
+          <div class="year_company">
+            <h5> April 2023 to October 2023</h5>
+            <h5>DELL INAAS </h5>
+          </div>
+          <div class="text">
+            <h4> Lead Angular Developer</h4>
+            <p>
+              Working as a Technical Lead with following responsibilities Develop and write high quality coding that
+              meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>Mar 2022 to Mar 2023</h5>
+            <h5>CITCO CBO</h5>
+          </div>
+          <div class="text">
+            <h4> Lead UI Developer</h4>
+            <p>
+              Working as a Technical Lead with following responsibilities Develop and write high quality coding that
+              meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>  June 2020 to Mar 2022
+            </h5>
+            <h5> Veritas EDP</h5>
+          </div>
+          <div class="text">
+            <h4> Lead Angular Developer</h4>
+            <p>
+              Working as a Technical Lead with following responsibilities Develop and write high quality coding that
+              meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>  March 2018 to May 2020
+
+            </h5>
+            <h5> Fedex IRC and Fedex WIRA</h5>
+          </div>
+          <div class="text">
+            <h4>  Lead UI Developer
+            </h4>
+            <p>
+              Working as a Technical Lead with following responsibilities Develop and write high quality coding that
+              meets customer requirements with AEM, Vue3. Lead team of developers for a separate module.
+            </p>
+          </div>
+        </div>
         <div class="box">
           <div class="year_company">
             <h5> October 2015 to February 2018 </h5>
