--- a/index.html
+++ b/index.html
@@ -61,24 +61,26 @@
       </div>
 
       <div class="contactInfo language">
-        <h3 class="title">Languages</h3>
+        <h3 class="title">Technologies</h3>
         <ul>
           <li>
-            <span class="text">English</span>
+            <span class="text">UI</span>
             <span class="percent">
-              <div style="width: 80%;"></div>
+              Angular, React, HTML5, CSS3, Typescript, JavaScript, jQuery, Bootstrap,SASS, D3.js, Node.js
             </span>
           </li>
           <li>
-            <span class="text">Telugu</span>
+            <span class="text">Backend Technologie</span>
             <span class="percent">
-              <div style="width: 100%;"></div>
+              JAVA, Spring Boot, Node.js, Express
+
             </span>
           </li>
           <li>
-            <span class="text">Hindi</span>
+            <span class="text">CMS & other Tools</span>
             <span class="percent">
-              <div style="width: 40%;"></div>
+              Adobe Experience Manager, Jenkins,Udeploy, Git, Bit Bucket, Maven
+
             </span>
           </li>
         </ul>
