project description update

--- a/index.html
+++ b/index.html
@@ -136,7 +136,19 @@
                   <div class="text">
                      <h4> Lead Angular Developer</h4>
                      <p>
-                        The INaaS portal is a one-stop shop for users to manage the Integration requests/services. The focus is to create a cloud-like experience on the current integration infrastructure and leverage the DevOps processes in the back end to perform the actual operations on the integration platform. This portal serves as a control interface for administrative actions and workflow capabilities. It provides various metrics to deduce usage of the INaaS services. 
+                       <ul>
+                        <li>Have been working as a Lead UI Developer </li>
+                          <li>Working on requirement gathering, analyzing, and providing planning for features.</li>
+                          <li>Updating the confluence with details on requirements and development design.</li>
+                          <li>Developing various components using Angular 11, HTML, CSS, SASS, Dell Core UI, RxJS etc.</li>
+                         <li>Developed various components with complex reactive forms.</li> 
+                         <li>Developed reusable components with common functionality which can be used across the application</li> 
+                          <li>Worked on UI Development for the Dell Devops Project built with React</li>
+                          <li>Working on integrating with different backend micro services which are Authentication enabled.</li>
+                          <li>Involved in Weekly production deployment to push the developed changes to production.</li>
+                          <li>Interacted with various teams to work on the individual modules as it is a Platform application which involves teams from different tools/technologies.</li>
+                         
+                       </ul> 
                      </p>
                   </div>
                </div>
